--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -30,6 +30,7 @@
     color: #e0e0e0;
     min-width: 80px;
     outline: none;
+    font-weight: normal;
 }
 
 .btn:hover {
@@ -52,7 +53,22 @@
     border: 1px outset #777;
 }
 
+
 /* Button Color Variants */
+.btn.btn-success {
+    background: linear-gradient(to bottom, #2a5a2a, #1a4a1a);
+    border-color: #4a8a4a;
+}
+
+.btn.btn-success:hover {
+    background: linear-gradient(to bottom, #3a6a3a, #2a5a2a);
+}
+
+.btn.btn-success:active {
+    border: 1px inset #4a8a4a;
+    background: linear-gradient(to bottom, #1a4a1a, #2a5a2a);
+}
+
 .btn.btn-danger {
     background: linear-gradient(to bottom, #7a3a3a, #6a2a2a);
     border-color: #8a4a4a;
